# opendatacapture

./: Cargo.toml  LICENSE-MIT  README.md  codecov.yml  docker-compose.yml  motivation.md  opendatacature.code-workspace
.github/workflows/: backend.yml  coverage.yml  deploy.yml  docker.yml  frontend.yml  fullstack.yml
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: api.rs  auth.rs  db.rs  error.rs  json.rs  lib.rs  main.rs  password.rs
backend/src/db/: admin.rs  mod.rs  user.rs
backend/src/db/user/: mod.rs  table.rs  tests.rs
docs/: _config.yml
frontend/: .prettierrc.toml  Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  index.css  index.tsx  serviceWorker.ts  setupTests.ts
frontend/src/components/: admin-dashboard.test.tsx  admin-dashboard.tsx  button-array.tsx  button.tsx  checkbox.tsx  divider.tsx  home.test.tsx  home.tsx  login.test.tsx  login.tsx  nav.tsx  project.test.tsx  project.tsx  select.tsx  table.tsx
frontend/src/components/admin/: admin.test.tsx  admin.tsx  projects.tsx  users.test.tsx  users.tsx
frontend/src/lib/: auth.test.ts  auth.ts  config.ts  hooks.ts  io-validation.ts  project.ts  theme.test.ts  theme.ts  to-proper-case.ts
frontend/src/lib/api/: admin.ts  auth.ts  (+6 more)
frontend/src/tests/: api.ts  data.ts  fullstack.ts  requireBackend.ts  util.tsx
src/: admindb.rs  api.rs  db.rs  error.rs  json.rs  lib.rs  main.rs  password.rs
src/api/: handlers.rs
src/db/: admin.rs  constants.rs  error.rs  table.rs  tests.rs  user.rs
src/db/user/: tests.rs
(+6 files in other folders)
