[package]
name = "opendatacapture"
version = "0.0.0"
authors = ["Arseniy Khvorov"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
tokio-postgres = "0.5"
structopt = "0.3"
pretty_env_logger = "0.4.0"
log = "0.4"
phf = { version = "0.8", features = ["macros"] }
