[package]
name = "opendatacapture"
version = "0.0.0"
authors = ["Arseniy Khvorov"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
tokio-postgres = {version = "0.5", features = ["with-serde_json-1"]}
structopt = "0.3"
pretty_env_logger = "0.4.0"
log = "0.4"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
rust-argon2 = "0.8"
rand = "0.7"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
mobc-postgres = "0.5"
mobc = "0.5"
