[package]
name = "opendatacapture"
version = "0.0.0"
authors = ["Arseniy Khvorov"]
edition = "2018"

[dependencies]
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
structopt = "0.3"
pretty_env_logger = "0.4.0"
log = "0.4"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
rust-argon2 = "0.8"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.13"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "macros", "postgres", "json", "chrono" ] }
sha2 = "0.9"
hex = "0.4"

[dev-dependencies]
erased-serde = "0.3"
